testsuite/tests/typecheck/should_fail/TyfamsDisabled.hs
module TyfamsDisabled where

type family A
