testsuite/tests/typecheck/should_fail/TyfamsDisabled.stderr

TyfamsDisabled.hs:3:1: error: [GHC-39191]
    • Illegal family declaration for ‘A’
    • In the type family declaration for ‘A’
    Suggested fix:
      Perhaps you intended to use the ‘TypeFamilies’ extension (implied by ‘TypeFamilyDependencies’)
